--- a/src/tool/RscTables/RscTables.vcxproj.filters
+++ b/src/tool/RscTables/RscTables.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="DlgDataCount.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Common Control\PropertyList.cpp">
+    <ClCompile Include="..\Widget\PropertyList.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="RscTables.cpp">
@@ -43,7 +43,7 @@
     <ClInclude Include="DlgDataCount.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Common Control\PropertyList.h">
+    <ClInclude Include="..\Widget\PropertyList.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Resource.h">
