--- a/src/tool/UIE/UIE.vcxproj
+++ b/src/tool/UIE/UIE.vcxproj
@@ -69,7 +69,7 @@
       <ObjectFileName>.\Debug\</ObjectFileName>
       <ProgramDataBaseFileName>.\Debug\</ProgramDataBaseFileName>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
-      <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)..\..\vendor\DXSDK8\Include;$(ProjectDir)..\..\vendor\VC6\VC98\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\MFC\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\ATL\INCLUDE</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)..\..\engine;$(ProjectDir)..\..\game;$(ProjectDir)..\..\vendor\DXSDK8\Include;$(ProjectDir)..\..\vendor\VC6\VC98\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\MFC\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\ATL\INCLUDE</AdditionalIncludeDirectories>
     </ClCompile>
     <Midl>
       <SuppressStartupBanner>true</SuppressStartupBanner>
@@ -109,7 +109,7 @@
       <PrecompiledHeaderOutputFile>.\Release\UIE.pch</PrecompiledHeaderOutputFile>
       <ObjectFileName>.\Release\</ObjectFileName>
       <ProgramDataBaseFileName>.\Release\</ProgramDataBaseFileName>
-      <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)..\..\vendor\DXSDK8\Include;$(ProjectDir)..\..\vendor\VC6\VC98\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\MFC\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\ATL\INCLUDE</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)..\..\engine;$(ProjectDir)..\..\game;$(ProjectDir)..\..\vendor\DXSDK8\Include;$(ProjectDir)..\..\vendor\VC6\VC98\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\MFC\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\ATL\INCLUDE</AdditionalIncludeDirectories>
     </ClCompile>
     <Midl>
       <SuppressStartupBanner>true</SuppressStartupBanner>
@@ -134,33 +134,33 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\Common Control\PropertyList.cpp" />
-    <ClCompile Include="..\N3BASE\BitMapFile.cpp" />
-    <ClCompile Include="..\N3BASE\DFont.cpp" />
-    <ClCompile Include="..\N3BASE\LogWriter.cpp" />
-    <ClCompile Include="..\N3BASE\N3AlphaPrimitiveManager.cpp" />
-    <ClCompile Include="..\N3BASE\N3Base.cpp" />
-    <ClCompile Include="..\N3BASE\N3BaseFileAccess.cpp" />
-    <ClCompile Include="..\N3BASE\N3Eng.cpp" />
-    <ClCompile Include="..\N3BASE\N3EngTool.cpp" />
-    <ClCompile Include="..\N3Base\N3SndMgr.cpp" />
-    <ClCompile Include="..\N3Base\N3SndObj.cpp" />
-    <ClCompile Include="..\N3BASE\N3SndObjStream.cpp" />
-    <ClCompile Include="..\N3BASE\N3Texture.cpp" />
-    <ClCompile Include="..\N3BASE\N3UIArea.cpp" />
-    <ClCompile Include="..\N3BASE\N3UIBase.cpp" />
-    <ClCompile Include="..\N3BASE\N3UIButton.cpp" />
-    <ClCompile Include="..\N3BASE\N3UIEdit.cpp" />
-    <ClCompile Include="..\N3BASE\N3UIImage.cpp" />
-    <ClCompile Include="..\N3BASE\N3UIList.cpp" />
-    <ClCompile Include="..\N3BASE\N3UIManager.cpp" />
-    <ClCompile Include="..\N3BASE\N3UIProgress.cpp" />
-    <ClCompile Include="..\N3BASE\N3UIScrollBar.cpp" />
-    <ClCompile Include="..\N3BASE\N3UIStatic.cpp" />
-    <ClCompile Include="..\N3BASE\N3UIString.cpp" />
-    <ClCompile Include="..\N3BASE\N3UITooltip.cpp" />
-    <ClCompile Include="..\N3BASE\N3UITrackBar.cpp" />
-    <ClCompile Include="..\N3Base\WaveFile.cpp" />
+    <ClCompile Include="..\Widget\PropertyList.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\BitMapFile.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\DFont.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\LogWriter.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3AlphaPrimitiveManager.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3Base.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3BaseFileAccess.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3Eng.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3EngTool.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3SndMgr.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3SndObj.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3SndObjStream.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3Texture.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3UIArea.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3UIBase.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3UIButton.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3UIEdit.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3UIImage.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3UIList.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3UIManager.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3UIProgress.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3UIScrollBar.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3UIStatic.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3UIString.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3UITooltip.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3UITrackBar.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\WaveFile.cpp" />
     <ClCompile Include="DlgAnimate.cpp" />
     <ClCompile Include="DlgBar.cpp" />
     <ClCompile Include="DlgChangeImage.cpp" />
@@ -180,37 +180,37 @@
     <ResourceCompile Include="UIE.rc" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Common Control\PropertyList.h" />
-    <ClInclude Include="..\N3BASE\BitMapFile.h" />
-    <ClInclude Include="..\N3BASE\DFont.h" />
-    <ClInclude Include="..\N3BASE\LogWriter.h" />
-    <ClInclude Include="..\N3BASE\My_3DStruct.h" />
-    <ClInclude Include="..\N3BASE\N3AlphaPrimitiveManager.h" />
-    <ClInclude Include="..\N3BASE\N3Base.h" />
-    <ClInclude Include="..\N3BASE\N3BaseFileAccess.h" />
-    <ClInclude Include="..\N3BASE\N3Eng.h" />
-    <ClInclude Include="..\N3BASE\N3EngTool.h" />
-    <ClInclude Include="..\N3BASE\N3Mng.h" />
-    <ClInclude Include="..\N3Base\N3SndDef.h" />
-    <ClInclude Include="..\N3Base\N3SndMgr.h" />
-    <ClInclude Include="..\N3Base\N3SndObj.h" />
-    <ClInclude Include="..\N3BASE\N3SndObjStream.h" />
-    <ClInclude Include="..\N3BASE\N3Texture.h" />
-    <ClInclude Include="..\N3BASE\N3UIArea.h" />
-    <ClInclude Include="..\N3BASE\N3UIBase.h" />
-    <ClInclude Include="..\N3BASE\N3UIButton.h" />
-    <ClInclude Include="..\N3BASE\N3UIDef.h" />
-    <ClInclude Include="..\N3BASE\N3UIEdit.h" />
-    <ClInclude Include="..\N3BASE\N3UIImage.h" />
-    <ClInclude Include="..\N3BASE\N3UIList.h" />
-    <ClInclude Include="..\N3BASE\N3UIManager.h" />
-    <ClInclude Include="..\N3BASE\N3UIProgress.h" />
-    <ClInclude Include="..\N3BASE\N3UIScrollBar.h" />
-    <ClInclude Include="..\N3BASE\N3UIStatic.h" />
-    <ClInclude Include="..\N3BASE\N3UIString.h" />
-    <ClInclude Include="..\N3BASE\N3UITooltip.h" />
-    <ClInclude Include="..\N3BASE\N3UITrackBar.h" />
-    <ClInclude Include="..\N3Base\WaveFile.h" />
+    <ClInclude Include="..\Widget\PropertyList.h" />
+    <ClInclude Include="..\..\engine\N3Base\BitMapFile.h" />
+    <ClInclude Include="..\..\engine\N3Base\DFont.h" />
+    <ClInclude Include="..\..\engine\N3Base\LogWriter.h" />
+    <ClInclude Include="..\..\engine\N3Base\My_3DStruct.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3AlphaPrimitiveManager.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3Base.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3BaseFileAccess.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3Eng.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3EngTool.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3Mng.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3SndDef.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3SndMgr.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3SndObj.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3SndObjStream.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3Texture.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3UIArea.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3UIBase.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3UIButton.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3UIDef.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3UIEdit.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3UIImage.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3UIList.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3UIManager.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3UIProgress.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3UIScrollBar.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3UIStatic.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3UIString.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3UITooltip.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3UITrackBar.h" />
+    <ClInclude Include="..\..\engine\N3Base\WaveFile.h" />
     <ClInclude Include="DlgAnimate.h" />
     <ClInclude Include="DlgBar.h" />
     <ClInclude Include="DlgChangeImage.h" />
