Fix linking in debug mode.
DirectX-9's dinput8 and dxguid libs were acting up, where it caused
linking issue. I added a patch for the SDK explaining the fix:
https://github.com/stevewgr/ko-vendor/commit/faf3d30a4608c347b01a983296ddc0a7907274a7

Also compile the game with /MT for release and /MTd for debug mode.

--- a/src/tool/N3FXE/N3FXE.vcxproj
+++ b/src/tool/N3FXE/N3FXE.vcxproj
@@ -91,7 +91,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
       <OutputFile>N3FXE_Debug.exe</OutputFile>
-      <AdditionalDependencies>winmm.lib;d3d9.lib;d3dx9.lib;dsound.lib;dxguid.lib;strmiids.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>winmm.lib;d3d9.lib;d3dx9d.lib;dsound.lib;dxguidd.lib;strmiids.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
